--- a/package.json
+++ b/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "theme",
+  "name": "root",
   "version": "0.0.1",
   "description": "一个简约风的VitePress博客主题",
-  "keywords": [],
   "author": "fengwang",
-  "license": "MIT",
-  "devDependencies": {
-    "vitepress": "^1.0.0-rc.44"
-  },
-  "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
-  }
+  "license": "MIT"
 }
