--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "root",
   "version": "0.0.1",
   "description": "一个简约风的VitePress博客主题",
+  "scripts": {
+    "changeset": "changeset",
+    "version": "changeset version",
+    "publish": "changeset && changeset version && changeset publish --tag beta"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1"
+  },
   "author": "fengwang",
   "license": "MIT"
 }
